@@ -141,7 +141,7 @@ CB_FLAG (cb_flag_debugging_line, 1, "debugging-line",
 
 CB_FLAG (cb_flag_source_location, 1, "source-location",
 	_("  -fsource-location     generate source location code\n"
-	  "                        * turned on by -debug/-g/-ftraceall/-fec"))
+	  "                        * turned on by -debug/-ftraceall/-fec/-dump"))
 
 CB_FLAG (cb_flag_implicit_init, 1, "implicit-init",
 	_("  -fimplicit-init       automatic initialization of the COBOL runtime system"))
@@ -152,7 +152,7 @@ CB_FLAG_ON (cb_flag_recursive_check, 1, "recursive-check",
 
 CB_FLAG (cb_flag_stack_check, 1, "stack-check",
 	_("  -fstack-check         PERFORM stack checking\n"
-	  "                        * turned on by -debug or -g"))
+	  "                        * turned on by -debug/-g"))
 
 CB_FLAG (cb_flag_write_after, 1, "write-after",
 	_("  -fwrite-after         use AFTER 1 for WRITE of LINE SEQUENTIAL\n"
